[package]
name = "oauth-line"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
dotenv = "0.15.0"
oauth2 = "4.4.2"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
