[package]
name = "oauth-line"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
axum-extra = { version = "0.9.6", features = ["cookie"] }
dotenv = "0.15.0"
oauth2 = "4.4.2"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.11.0", features = ["v4"] }

[dev-dependencies]
axum = { version = "0.7.9", features = ["macros"] }
